--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9622641509433962" branch-rate="0.8709677419354839" lines-covered="102" lines-valid="106" branches-covered="27" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1442214839269">
+<coverage line-rate="0.9607843137254902" branch-rate="0.8421052631578947" lines-covered="98" lines-valid="102" branches-covered="32" branches-valid="38" complexity="2.111111111111111" version="2.1.1" timestamp="1442229425692">
 	<packages />
 </coverage>
