--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,62 +1,64 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9622641509433962" branch-rate="0.8709677419354839" lines-covered="102" lines-valid="106" branches-covered="27" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1442214838799">
+<coverage line-rate="0.9607843137254902" branch-rate="0.8421052631578947" lines-covered="98" lines-valid="102" branches-covered="32" branches-valid="38" complexity="2.111111111111111" version="2.1.1" timestamp="1442229425213">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9622641509433962" branch-rate="0.8709677419354839" complexity="2.3">
+		<package name="com.tw.biblioteca" line-rate="0.9607843137254902" branch-rate="0.8421052631578947" complexity="2.111111111111111">
 			<classes>
-				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
+				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="4" hits="1" branch="false"/>
 								<line number="5" hits="1" branch="false"/>
+								<line number="6" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="main" signature="([Ljava/lang/String;)V" line-rate="0.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="0" branch="false"/>
 								<line number="9" hits="0" branch="false"/>
 								<line number="10" hits="0" branch="false"/>
+								<line number="11" hits="0" branch="false"/>
 							</lines>
 						</method>
 						<method name="start" signature="()V" line-rate="0.8333333333333334" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="1" branch="false"/>
 								<line number="14" hits="1" branch="false"/>
-								<line number="16" hits="1" branch="false"/>
+								<line number="15" hits="1" branch="false"/>
 								<line number="17" hits="1" branch="false"/>
 								<line number="18" hits="1" branch="false"/>
-								<line number="19" hits="0" branch="false"/>
+								<line number="19" hits="1" branch="false"/>
+								<line number="20" hits="0" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
 						<line number="4" hits="1" branch="false"/>
 						<line number="5" hits="1" branch="false"/>
-						<line number="8" hits="0" branch="false"/>
+						<line number="6" hits="1" branch="false"/>
 						<line number="9" hits="0" branch="false"/>
 						<line number="10" hits="0" branch="false"/>
-						<line number="13" hits="1" branch="false"/>
+						<line number="11" hits="0" branch="false"/>
 						<line number="14" hits="1" branch="false"/>
-						<line number="16" hits="1" branch="false"/>
+						<line number="15" hits="1" branch="false"/>
 						<line number="17" hits="1" branch="false"/>
 						<line number="18" hits="1" branch="false"/>
-						<line number="19" hits="0" branch="false"/>
+						<line number="19" hits="1" branch="false"/>
+						<line number="20" hits="0" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Book" filename="com/tw/biblioteca/Book.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="79" branch="false"/>
-								<line number="10" hits="79" branch="false"/>
-								<line number="11" hits="79" branch="false"/>
-								<line number="12" hits="79" branch="false"/>
-								<line number="13" hits="79" branch="false"/>
+								<line number="9" hits="82" branch="false"/>
+								<line number="10" hits="82" branch="false"/>
+								<line number="11" hits="82" branch="false"/>
+								<line number="12" hits="82" branch="false"/>
+								<line number="13" hits="82" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -101,19 +103,19 @@
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="16" hits="12" branch="false"/>
-								<line number="17" hits="12" branch="false"/>
+								<line number="16" hits="15" branch="false"/>
+								<line number="17" hits="15" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="79" branch="false"/>
-						<line number="10" hits="79" branch="false"/>
-						<line number="11" hits="79" branch="false"/>
-						<line number="12" hits="79" branch="false"/>
-						<line number="13" hits="79" branch="false"/>
-						<line number="16" hits="12" branch="false"/>
-						<line number="17" hits="12" branch="false"/>
+						<line number="9" hits="82" branch="false"/>
+						<line number="10" hits="82" branch="false"/>
+						<line number="11" hits="82" branch="false"/>
+						<line number="12" hits="82" branch="false"/>
+						<line number="13" hits="82" branch="false"/>
+						<line number="16" hits="15" branch="false"/>
+						<line number="17" hits="15" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
@@ -152,13 +154,13 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="20" branch="false"/>
-								<line number="8" hits="20" branch="false"/>
-								<line number="10" hits="20" branch="false"/>
-								<line number="11" hits="20" branch="false"/>
-								<line number="12" hits="20" branch="false"/>
-								<line number="13" hits="20" branch="false"/>
-								<line number="14" hits="20" branch="false"/>
+								<line number="7" hits="21" branch="false"/>
+								<line number="8" hits="21" branch="false"/>
+								<line number="10" hits="21" branch="false"/>
+								<line number="11" hits="21" branch="false"/>
+								<line number="12" hits="21" branch="false"/>
+								<line number="13" hits="21" branch="false"/>
+								<line number="14" hits="21" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -176,14 +178,14 @@
 						</method>
 						<method name="printList" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="17" hits="4" branch="false"/>
-								<line number="18" hits="15" branch="true" condition-coverage="100% (2/2)">
+								<line number="17" hits="5" branch="false"/>
+								<line number="18" hits="19" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="19" hits="11" branch="false"/>
-								<line number="20" hits="4" branch="false"/>
+								<line number="19" hits="14" branch="false"/>
+								<line number="20" hits="5" branch="false"/>
 							</lines>
 						</method>
 						<method name="removeBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -201,21 +203,21 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="20" branch="false"/>
-						<line number="8" hits="20" branch="false"/>
-						<line number="10" hits="20" branch="false"/>
-						<line number="11" hits="20" branch="false"/>
-						<line number="12" hits="20" branch="false"/>
-						<line number="13" hits="20" branch="false"/>
-						<line number="14" hits="20" branch="false"/>
-						<line number="17" hits="4" branch="false"/>
-						<line number="18" hits="15" branch="true" condition-coverage="100% (2/2)">
+						<line number="7" hits="21" branch="false"/>
+						<line number="8" hits="21" branch="false"/>
+						<line number="10" hits="21" branch="false"/>
+						<line number="11" hits="21" branch="false"/>
+						<line number="12" hits="21" branch="false"/>
+						<line number="13" hits="21" branch="false"/>
+						<line number="14" hits="21" branch="false"/>
+						<line number="17" hits="5" branch="false"/>
+						<line number="18" hits="19" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="19" hits="11" branch="false"/>
-						<line number="20" hits="4" branch="false"/>
+						<line number="19" hits="14" branch="false"/>
+						<line number="20" hits="5" branch="false"/>
 						<line number="23" hits="7" branch="false"/>
 						<line number="24" hits="7" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -306,138 +308,106 @@
 						<line number="32" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="0.8333333333333334" complexity="2.5">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="9" branch="false"/>
-								<line number="12" hits="9" branch="false"/>
-								<line number="13" hits="9" branch="false"/>
-								<line number="14" hits="9" branch="false"/>
-								<line number="15" hits="9" branch="false"/>
-								<line number="16" hits="9" branch="false"/>
-								<line number="17" hits="9" branch="false"/>
+								<line number="10" hits="8" branch="false"/>
+								<line number="12" hits="8" branch="false"/>
+								<line number="13" hits="8" branch="false"/>
+								<line number="14" hits="8" branch="false"/>
+								<line number="15" hits="8" branch="false"/>
+								<line number="16" hits="8" branch="false"/>
+								<line number="17" hits="8" branch="false"/>
 							</lines>
 						</method>
-						<method name="chosenOption" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="chosenOption" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="7" branch="false"/>
-								<line number="30" hits="7" branch="false"/>
-								<line number="31" hits="7" branch="false"/>
-								<line number="32" hits="1" branch="false"/>
-								<line number="33" hits="1" branch="false"/>
-							</lines>
-						</method>
-						<method name="chosenValidOption" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
-							<lines>
-								<line number="20" hits="5" branch="false"/>
-								<line number="22" hits="5" branch="false"/>
-								<line number="23" hits="5" branch="true" condition-coverage="50% (1/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="50%"/>
-									</conditions>
-								</line>
-								<line number="24" hits="5" branch="false"/>
-							</lines>
-						</method>
-						<method name="isChoiceValid" signature="(I)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
-							<lines>
-								<line number="39" hits="22" branch="true" condition-coverage="100% (2/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="100%"/>
-									</conditions>
-								</line>
-								<line number="40" hits="20" branch="true" condition-coverage="100% (2/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="100%"/>
-									</conditions>
-								</line>
-								<line number="41" hits="5" branch="false"/>
-								<line number="43" hits="2" branch="false"/>
-								<line number="44" hits="2" branch="false"/>
+								<line number="20" hits="4" branch="false"/>
+								<line number="21" hits="4" branch="false"/>
+								<line number="22" hits="4" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="9" branch="false"/>
-						<line number="12" hits="9" branch="false"/>
-						<line number="13" hits="9" branch="false"/>
-						<line number="14" hits="9" branch="false"/>
-						<line number="15" hits="9" branch="false"/>
-						<line number="16" hits="9" branch="false"/>
-						<line number="17" hits="9" branch="false"/>
-						<line number="20" hits="5" branch="false"/>
-						<line number="22" hits="5" branch="false"/>
-						<line number="23" hits="5" branch="true" condition-coverage="50% (1/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="50%"/>
-							</conditions>
-						</line>
-						<line number="24" hits="5" branch="false"/>
-						<line number="28" hits="7" branch="false"/>
-						<line number="30" hits="7" branch="false"/>
-						<line number="31" hits="7" branch="false"/>
-						<line number="32" hits="1" branch="false"/>
-						<line number="33" hits="1" branch="false"/>
-						<line number="39" hits="22" branch="true" condition-coverage="100% (2/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="100%"/>
-							</conditions>
-						</line>
-						<line number="40" hits="20" branch="true" condition-coverage="100% (2/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="100%"/>
-							</conditions>
-						</line>
-						<line number="41" hits="5" branch="false"/>
-						<line number="43" hits="2" branch="false"/>
-						<line number="44" hits="2" branch="false"/>
+						<line number="10" hits="8" branch="false"/>
+						<line number="12" hits="8" branch="false"/>
+						<line number="13" hits="8" branch="false"/>
+						<line number="14" hits="8" branch="false"/>
+						<line number="15" hits="8" branch="false"/>
+						<line number="16" hits="8" branch="false"/>
+						<line number="17" hits="8" branch="false"/>
+						<line number="20" hits="4" branch="false"/>
+						<line number="21" hits="4" branch="false"/>
+						<line number="22" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7777777777777778" complexity="3.0">
 					<methods>
-						<method name="&lt;init&gt;" signature="(ILcom/tw/biblioteca/Library;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Lcom/tw/biblioteca/Library;Lcom/tw/biblioteca/Menu;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="5" branch="false"/>
-								<line number="9" hits="5" branch="false"/>
-								<line number="10" hits="5" branch="false"/>
-								<line number="11" hits="5" branch="false"/>
+								<line number="9" hits="7" branch="false"/>
+								<line number="10" hits="7" branch="false"/>
+								<line number="11" hits="7" branch="false"/>
+								<line number="12" hits="7" branch="false"/>
+								<line number="13" hits="7" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()V" line-rate="1.0" branch-rate="0.8" complexity="0">
+						<method name="dispatch" signature="()V" line-rate="1.0" branch-rate="0.7777777777777778" complexity="0">
 							<lines>
-								<line number="15" hits="5" branch="true" condition-coverage="80% (4/5)">
+								<line number="17" hits="7" branch="true" condition-coverage="77% (14/18)">
 									<conditions>
-										<condition number="0" type="switch" coverage="80%"/>
+										<condition number="0" type="jump" coverage="50%"/>
+										<condition number="1" type="jump" coverage="50%"/>
+										<condition number="2" type="jump" coverage="50%"/>
+										<condition number="3" type="jump" coverage="50%"/>
+										<condition number="0" type="switch" coverage="100%"/>
+										<condition number="1" type="switch" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="17" hits="1" branch="false"/>
-								<line number="18" hits="1" branch="false"/>
+								<line number="19" hits="2" branch="false"/>
 								<line number="20" hits="2" branch="false"/>
-								<line number="22" hits="1" branch="false"/>
-								<line number="23" hits="1" branch="false"/>
+								<line number="22" hits="2" branch="false"/>
+								<line number="24" hits="1" branch="false"/>
 								<line number="25" hits="1" branch="false"/>
-								<line number="27" hits="3" branch="false"/>
+								<line number="27" hits="1" branch="false"/>
+								<line number="28" hits="1" branch="false"/>
+								<line number="30" hits="1" branch="false"/>
+								<line number="31" hits="1" branch="false"/>
+								<line number="32" hits="1" branch="false"/>
+								<line number="33" hits="1" branch="false"/>
+								<line number="35" hits="5" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="8" hits="5" branch="false"/>
-						<line number="9" hits="5" branch="false"/>
-						<line number="10" hits="5" branch="false"/>
-						<line number="11" hits="5" branch="false"/>
-						<line number="15" hits="5" branch="true" condition-coverage="80% (4/5)">
+						<line number="9" hits="7" branch="false"/>
+						<line number="10" hits="7" branch="false"/>
+						<line number="11" hits="7" branch="false"/>
+						<line number="12" hits="7" branch="false"/>
+						<line number="13" hits="7" branch="false"/>
+						<line number="17" hits="7" branch="true" condition-coverage="77% (14/18)">
 							<conditions>
-								<condition number="0" type="switch" coverage="80%"/>
+								<condition number="0" type="jump" coverage="50%"/>
+								<condition number="1" type="jump" coverage="50%"/>
+								<condition number="2" type="jump" coverage="50%"/>
+								<condition number="3" type="jump" coverage="50%"/>
+								<condition number="0" type="switch" coverage="100%"/>
+								<condition number="1" type="switch" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="17" hits="1" branch="false"/>
-						<line number="18" hits="1" branch="false"/>
+						<line number="19" hits="2" branch="false"/>
 						<line number="20" hits="2" branch="false"/>
-						<line number="22" hits="1" branch="false"/>
-						<line number="23" hits="1" branch="false"/>
+						<line number="22" hits="2" branch="false"/>
+						<line number="24" hits="1" branch="false"/>
 						<line number="25" hits="1" branch="false"/>
-						<line number="27" hits="3" branch="false"/>
+						<line number="27" hits="1" branch="false"/>
+						<line number="28" hits="1" branch="false"/>
+						<line number="30" hits="1" branch="false"/>
+						<line number="31" hits="1" branch="false"/>
+						<line number="32" hits="1" branch="false"/>
+						<line number="33" hits="1" branch="false"/>
+						<line number="35" hits="5" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
