--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9694656488549618" branch-rate="0.8913043478260869" lines-covered="127" lines-valid="131" branches-covered="41" branches-valid="46" complexity="2.0833333333333335" version="2.1.1" timestamp="1442298899874">
+<coverage line-rate="0.9699248120300752" branch-rate="0.8958333333333334" lines-covered="129" lines-valid="133" branches-covered="43" branches-valid="48" complexity="2.1666666666666665" version="2.1.1" timestamp="1442299249752">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9694656488549618" branch-rate="0.8913043478260869" complexity="2.0833333333333335">
+		<package name="com.tw.biblioteca" line-rate="0.9699248120300752" branch-rate="0.8958333333333334" complexity="2.1666666666666665">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -54,11 +54,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="88" branch="false"/>
-								<line number="10" hits="88" branch="false"/>
-								<line number="11" hits="88" branch="false"/>
-								<line number="12" hits="88" branch="false"/>
-								<line number="13" hits="88" branch="false"/>
+								<line number="9" hits="94" branch="false"/>
+								<line number="10" hits="94" branch="false"/>
+								<line number="11" hits="94" branch="false"/>
+								<line number="12" hits="94" branch="false"/>
+								<line number="13" hits="94" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -98,11 +98,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="88" branch="false"/>
-						<line number="10" hits="88" branch="false"/>
-						<line number="11" hits="88" branch="false"/>
-						<line number="12" hits="88" branch="false"/>
-						<line number="13" hits="88" branch="false"/>
+						<line number="9" hits="94" branch="false"/>
+						<line number="10" hits="94" branch="false"/>
+						<line number="11" hits="94" branch="false"/>
+						<line number="12" hits="94" branch="false"/>
+						<line number="13" hits="94" branch="false"/>
 						<line number="16" hits="15" branch="false"/>
 						<line number="17" hits="15" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
@@ -128,21 +128,21 @@
 						<line number="36" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
+				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.3333333333333335">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="23" branch="false"/>
-								<line number="8" hits="23" branch="false"/>
-								<line number="9" hits="23" branch="false"/>
-								<line number="11" hits="23" branch="false"/>
-								<line number="12" hits="23" branch="false"/>
-								<line number="13" hits="23" branch="false"/>
-								<line number="14" hits="23" branch="false"/>
-								<line number="16" hits="23" branch="false"/>
-								<line number="17" hits="23" branch="false"/>
-								<line number="18" hits="23" branch="false"/>
-								<line number="19" hits="23" branch="false"/>
+								<line number="7" hits="25" branch="false"/>
+								<line number="8" hits="25" branch="false"/>
+								<line number="9" hits="25" branch="false"/>
+								<line number="11" hits="25" branch="false"/>
+								<line number="12" hits="25" branch="false"/>
+								<line number="13" hits="25" branch="false"/>
+								<line number="14" hits="25" branch="false"/>
+								<line number="16" hits="25" branch="false"/>
+								<line number="17" hits="25" branch="false"/>
+								<line number="18" hits="25" branch="false"/>
+								<line number="19" hits="25" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -195,26 +195,32 @@
 								<line number="40" hits="2" branch="false"/>
 							</lines>
 						</method>
-						<method name="removeMovie" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="removeMovie" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="56" hits="1" branch="false"/>
-								<line number="57" hits="1" branch="false"/>
-								<line number="58" hits="1" branch="false"/>
+								<line number="56" hits="3" branch="false"/>
+								<line number="57" hits="3" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="58" hits="2" branch="false"/>
+								<line number="59" hits="2" branch="false"/>
+								<line number="61" hits="1" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="23" branch="false"/>
-						<line number="8" hits="23" branch="false"/>
-						<line number="9" hits="23" branch="false"/>
-						<line number="11" hits="23" branch="false"/>
-						<line number="12" hits="23" branch="false"/>
-						<line number="13" hits="23" branch="false"/>
-						<line number="14" hits="23" branch="false"/>
-						<line number="16" hits="23" branch="false"/>
-						<line number="17" hits="23" branch="false"/>
-						<line number="18" hits="23" branch="false"/>
-						<line number="19" hits="23" branch="false"/>
+						<line number="7" hits="25" branch="false"/>
+						<line number="8" hits="25" branch="false"/>
+						<line number="9" hits="25" branch="false"/>
+						<line number="11" hits="25" branch="false"/>
+						<line number="12" hits="25" branch="false"/>
+						<line number="13" hits="25" branch="false"/>
+						<line number="14" hits="25" branch="false"/>
+						<line number="16" hits="25" branch="false"/>
+						<line number="17" hits="25" branch="false"/>
+						<line number="18" hits="25" branch="false"/>
+						<line number="19" hits="25" branch="false"/>
 						<line number="22" hits="5" branch="false"/>
 						<line number="23" hits="19" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -249,9 +255,15 @@
 						<line number="47" hits="2" branch="false"/>
 						<line number="48" hits="2" branch="false"/>
 						<line number="51" hits="1" branch="false"/>
-						<line number="56" hits="1" branch="false"/>
-						<line number="57" hits="1" branch="false"/>
-						<line number="58" hits="1" branch="false"/>
+						<line number="56" hits="3" branch="false"/>
+						<line number="57" hits="3" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="58" hits="2" branch="false"/>
+						<line number="59" hits="2" branch="false"/>
+						<line number="61" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.LibraryController" filename="com/tw/biblioteca/LibraryController.java" line-rate="1.0" branch-rate="1.0" complexity="1.6666666666666667">
@@ -366,36 +378,36 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="80" branch="false"/>
-								<line number="11" hits="80" branch="false"/>
-								<line number="12" hits="80" branch="false"/>
-								<line number="13" hits="80" branch="false"/>
-								<line number="14" hits="80" branch="false"/>
-								<line number="15" hits="80" branch="false"/>
+								<line number="10" hits="88" branch="false"/>
+								<line number="11" hits="88" branch="false"/>
+								<line number="12" hits="88" branch="false"/>
+								<line number="13" hits="88" branch="false"/>
+								<line number="14" hits="88" branch="false"/>
+								<line number="15" hits="88" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="23" hits="5" branch="true" condition-coverage="100% (2/2)">
+								<line number="23" hits="11" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="24" hits="1" branch="false"/>
-								<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="26" hits="10" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="27" hits="1" branch="false"/>
-								<line number="29" hits="3" branch="false"/>
-								<line number="30" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="29" hits="9" branch="false"/>
+								<line number="30" hits="9" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="31" hits="2" branch="false"/>
-								<line number="33" hits="1" branch="false"/>
+								<line number="31" hits="5" branch="false"/>
+								<line number="33" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -411,34 +423,34 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="80" branch="false"/>
-						<line number="11" hits="80" branch="false"/>
-						<line number="12" hits="80" branch="false"/>
-						<line number="13" hits="80" branch="false"/>
-						<line number="14" hits="80" branch="false"/>
-						<line number="15" hits="80" branch="false"/>
+						<line number="10" hits="88" branch="false"/>
+						<line number="11" hits="88" branch="false"/>
+						<line number="12" hits="88" branch="false"/>
+						<line number="13" hits="88" branch="false"/>
+						<line number="14" hits="88" branch="false"/>
+						<line number="15" hits="88" branch="false"/>
 						<line number="18" hits="6" branch="false"/>
 						<line number="19" hits="6" branch="false"/>
-						<line number="23" hits="5" branch="true" condition-coverage="100% (2/2)">
+						<line number="23" hits="11" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="24" hits="1" branch="false"/>
-						<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="26" hits="10" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="27" hits="1" branch="false"/>
-						<line number="29" hits="3" branch="false"/>
-						<line number="30" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="29" hits="9" branch="false"/>
+						<line number="30" hits="9" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="31" hits="2" branch="false"/>
-						<line number="33" hits="1" branch="false"/>
+						<line number="31" hits="5" branch="false"/>
+						<line number="33" hits="4" branch="false"/>
 						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
